# wxWidgetsTests

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  scheme_wxCalc.txt
cmake/: CMakeConfig.cmake  ConanModule.cmake  FindPackages.cmake
wxCalc/: CMakeLists.txt  Calc_wxw.cpp  Calc_wxw.hpp  MainWindow.cpp  MainWindow.hpp  wxCalcMain.cpp
wxCalc/Public/: Colors.cpp  Colors.hpp  InternalProjectVariables.cpp  InternalProjectVariables.hpp  Operand.cpp  Operand.hpp  Operator.cpp  Operator.hpp  Utils.cpp  Utils.hpp
wxCalc/PublicVars/: Colors.cpp  Colors.hpp  InternalProjectVariables.cpp  InternalProjectVariables.hpp
wxCalc/Widgets/: PanelButtons.cpp  PanelButtons.hpp  PanelDisplay.cpp  PanelDisplay.hpp
wxXO/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  wxXOMain.cpp
wxXO/resource/: recource.h  resource.rc  resources.aps
